--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>PYlogger</title>
+    <style>
+	body{ margin:0 auto; }
+	</style>
 </head>
 <body>
-    <p>This is the body</p>
+	<center>
+	<p><h3>Welcome to PYlogger.</h3></p>
+	<br><h4>Enter wich sensor would you like to display</h4>
+	 <form>
+	  Sensor ID:<br>
+	  <input type="text" name="id" placeholder='Enter here...'><br><br>
+	  <input type="submit" value="Plot">
+	</form>
+	</center>
 </body>
 </html>
